--- a/Caddyfile
+++ b/Caddyfile
@@ -1,17 +1,20 @@
-temporal.letand.be {
-	reverse_proxy temporal:7233 {
-		header_down Strict-Transport-Security max-age=31536000;
-	} 
+{
+  # log
+  debug
 }
 
-temporal-web.letand.be {
-	reverse_proxy temporal-web:8088 {
-		header_down Strict-Transport-Security max-age=31536000;
-	} 
+localhost
+
+respond /hello/* "hello world"
+
+handle /site/* {
+  reverse_proxy site:3000
+}
+handle /docs/* {
+  reverse_proxy site:3001
+}
+handle_path /api/* {
+  reverse_proxy backend:3002
 }
 
-temporal-ui.letand.be {
-	reverse_proxy temporal-ui:8080 {
-		header_down Strict-Transport-Security max-age=31536000;
-	} 
-}
+respond "fallback. You made a request to path:{path}"
