--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,28 @@ services:
     networks:
       - aq-network
 
+  site:
+    container_name: "hrm_site_${NODE_ENV}"
+    image: "hrm_site_${NODE_ENV}"
+    environment:
+      - NODE_ENV:${NODE_ENV}
+    build:
+      context: .
+      target: "${NODE_ENV}"
+      dockerfile: ./Dockerfile.site
+    env_file:
+      - .env
+    ports:
+      - 3000:3000
+    depends_on:
+      - backend
+    networks:
+      - aq-network
+    volumes:
+      - ./app:/usr/src/app
+      - /usr/src/app/node_modules
+    restart: unless-stopped
+
   backend:
     container_name: "hrm_api_${NODE_ENV}"
     image: "hrm_api_${NODE_ENV}"
