fix db_url in dockerfile

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -22,7 +22,8 @@ WORKDIR /app/packages/backend
 EXPOSE 3002
 
 # TODO use .env
-ENV DATABASE_URL=postgres://elephant_1obz_user:9T3Og1XLPk3apR7u0fHeysx96DaiZ3S3@dpg-cangdn46fj34f1f162f0-a.frankfurt-postgres.render.com/elephant_1obz
+# ENV DATABASE_URL=postgres://elephant_1obz_user:9T3Og1XLPk3apR7u0fHeysx96DaiZ3S3@dpg-cangdn46fj34f1f162f0-a.frankfurt-postgres.render.com/elephant_1obz
+ENV DATABASE_URL="postgres://postgres:postgres@postgres:5432/aq-db"
 ENV AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
 
 CMD ["pnpm", "run", "start:prod"]
