--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,11 @@ services:
     networks:
       - aq-network
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: "${POSTGRES_DB_PREFIX}_${POSTGRES_DB_NAME}"
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
       PG_DATA: /var/lib/postgresql/data
     ports:
-      - ${POSTGRES_DB_PORT}:${POSTGRES_DB_PORT}
+      - 5434:5432
     volumes:
       - postgres:/var/lib/postgresql/data
 
