--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
     image: dpage/pgadmin4
     volumes:
       - postgres:/root/.pgadmin
+    ports:
+      - 5050:80
     env_file:
       - .env
     networks:
