--- a/Caddyfile
+++ b/Caddyfile
@@ -6,16 +6,18 @@ localhost, aqar.house {
   handle_path /api/* {
     reverse_proxy backend:3002 {
       header_up Host {upstream_hostport}
-      header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+      # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
       header_up X-Real-IP {remote}
+      header_down Strict-Transport-Security max-age=31536000;
     }
   }
 
   handle /* {
     reverse_proxy site:3000 {
       header_up Host {upstream_hostport}
-      header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+      # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
       header_up X-Real-IP {remote}
+      header_down Strict-Transport-Security max-age=31536000;
     }
   }
 
@@ -25,7 +27,8 @@ localhost, aqar.house {
 pgadmin.localhost, pgadmin.aqar.house {
   reverse_proxy pgadmin:80 {
     header_up Host {upstream_hostport}
-    header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
     header_up X-Real-IP {remote}
+    header_down Strict-Transport-Security max-age=31536000;
   }
 }
