--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.site
+      args:
+        - ORIGIN=${ORIGIN}
     ports:
       - 3000:3000
     depends_on:
