--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     container_name: caddy-service
     restart: unless-stopped
     ports:
-      - "80:80"
-      # - "2016:80"
+      - "${CADDY_PORT}:80"
       - "443:443"
     volumes:
       - $PWD/Caddyfile:/etc/caddy/Caddyfile
@@ -22,7 +21,7 @@ services:
       context: .
       dockerfile: ./Dockerfile.site
       args:
-        - ORIGIN=${ORIGIN}
+        SITE_ORIGIN: $SITE_ORIGIN
     ports:
       - 3000:3000
     depends_on:
