rm docker host port bindings

--- a/Caddyfile
+++ b/Caddyfile
@@ -24,7 +24,7 @@ aqar.live {
   respond "Fallback. You made a request to path:{path} port:{hostport}"
 }
 
-# pgadmin.localhost, pgadmin.aqar.live {
+# pgadmin.aqar.live {
 #   reverse_proxy pgadmin:80 {
 #     header_up Host {upstream_hostport}
 #     # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
