--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -20,36 +20,36 @@
     "@felte/reporter-tippy": "1.1.2",
     "@felte/validator-zod": "1.0.10",
     "@iconify/json": "2.1.63",
-    "@playwright/test": "1.23.2",
+    "@playwright/test": "1.23.4",
     "@rgossiaux/svelte-headlessui": "1.0.2",
     "@self/sdk": "workspace:0.0.1",
-    "@sentry/browser": "7.6.0",
-    "@sentry/node": "7.6.0",
-    "@sentry/tracing": "7.6.0",
+    "@sentry/browser": "7.7.0",
+    "@sentry/node": "7.7.0",
+    "@sentry/tracing": "7.7.0",
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
-    "@sveltejs/adapter-auto": "1.0.0-next.53",
-    "@sveltejs/adapter-node": "1.0.0-next.78",
-    "@sveltejs/adapter-vercel": "1.0.0-next.59",
-    "@sveltejs/kit": "1.0.0-next.357",
+    "@sveltejs/adapter-auto": "1.0.0-next.62",
+    "@sveltejs/adapter-node": "1.0.0-next.81",
+    "@sveltejs/adapter-vercel": "1.0.0-next.64",
+    "@sveltejs/kit": "1.0.0-next.379",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.2",
-    "@tailwindcss/typography": "0.5.3",
+    "@tailwindcss/typography": "0.5.4",
     "@testing-library/svelte": "3.1.3",
     "@types/cookie": "0.5.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.30.5",
-    "@typescript-eslint/parser": "5.30.5",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
     "autoprefixer": "10.4.7",
     "chart.js": "3.8.0",
     "chartjs-adapter-date-fns": "2.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
-    "date-fns-tz": "1.3.5",
+    "date-fns-tz": "1.3.6",
     "dotenv": "16.0.1",
-    "eslint": "8.19.0",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "felte": "1.2.2",
@@ -65,18 +65,19 @@
     "prettier-plugin-tailwindcss": "0.1.12",
     "remeda": "0.0.35",
     "superjson": "1.9.1",
-    "svelte": "3.48.0",
+    "svelte": "3.49.0",
     "svelte-check": "2.8.0",
     "svelte-meta-tags": "2.6.1",
     "svelte-preprocess": "4.10.7",
     "svelte2tsx": "0.5.11",
-    "tailwindcss": "3.1.5",
+    "tailwindcss": "3.1.6",
     "tippy.js": "6.3.7",
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "unplugin-icons": "0.14.3",
     "uuid": "8.3.2",
-    "zod": "3.17.3"
+    "vite": "3.0.2",
+    "zod": "3.17.9"
   },
   "type": "module"
 }
