--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -2,11 +2,11 @@
   "name": "@self/site",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev --port 3000",
+    "build": "vite build",
     "build:vercel": "pnpm --filter=@self/site... build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview --port 3000",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
     "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
