--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -54,6 +54,7 @@
     "meilisearch": "0.27.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
+    "postmark": "3.0.12",
     "prisma": "3.15.2",
     "prom-client": "14.0.1",
     "reflect-metadata": "0.1.13",
