Squashed commit of the following:
commit f7278246932d5d60e41bf7b9992f87432f57c6bd
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 22:15:41 2022 +0300

    better names

commit 8c3df96e148d4c1f7863ee4d9b02d9af026eddbc
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 22:05:24 2022 +0300

    add deep-map-values dep

commit 7ac8ee157ff2617d2d48c1d555814797fa961310
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 21:57:38 2022 +0300

    add /settings/expense-tree

commit df27430593075fb17a41b565e988c4c8ef19789e
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 21:35:54 2022 +0300

    add save button

commit ca699f1ecd79d2e13d8a03a6f0f2b597896b86b6
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 21:13:40 2022 +0300

    add save-nodes function

commit 2f48eabb7d0649bad6ba936c54bcae182c9dcc80
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 19:56:31 2022 +0300

    rm root label text

commit b9cd492a2d983224c74c3631e4ddd8dce3df42c3
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 19:54:05 2022 +0300

    add bg pattern to drop zones

commit 405d9d03091293da4ce45a9c764cc4a5ef5b734e
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 19:35:37 2022 +0300

    add active ring/border

commit e4f0ccc36323727e495ce7440e807cccb376f521
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 19:19:02 2022 +0300

    more styles

commit b01ad22c85f6e2d1fda70fea9586b9318e28d92f
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 18:17:57 2022 +0300

    larger dnd panels

commit d3d16d1bd1a4de7c8572c41dd89e5e366af3ad57
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 18:13:48 2022 +0300

    add dnd global type

commit 283d64423b61db8c73a03ce1eec36d739cbc3393
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 06:26:14 2022 +0300

    init root node

commit 00287705a49cead1c7d2b4b5a8b9448b4630199d
Author: nbe <aleisa.naser@gmail.com>
Date:   Sat Jul 23 06:08:34 2022 +0300

    content 2

commit 393dcbc19cae1aebcaa

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -57,6 +57,7 @@
     "jsdom": "20.0.0",
     "jsonwebtoken": "8.5.1",
     "just-compare": "2.1.1",
+    "just-deep-map-values": "1.0.0",
     "logrocket": "3.0.1",
     "nanoid": "4.0.0",
     "postcss": "8.4.14",
@@ -66,6 +67,7 @@
     "superjson": "1.9.1",
     "svelte": "3.49.0",
     "svelte-check": "2.8.0",
+    "svelte-dnd-action": "0.9.19",
     "svelte-meta-tags": "2.6.1",
     "svelte-preprocess": "4.10.7",
     "svelte2tsx": "0.5.12",
