--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -32,11 +32,13 @@
     "@sveltejs/adapter-node": "1.0.0-next.82",
     "@sveltejs/adapter-vercel": "1.0.0-next.65",
     "@sveltejs/kit": "1.0.0-next.384",
+    "@sveltejs/pancake": "0.0.18",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/typography": "0.5.4",
     "@testing-library/svelte": "3.1.3",
     "@types/cookie": "0.5.1",
+    "@types/d3": "7.4.0",
     "@types/jsonwebtoken": "8.5.8",
     "@typescript-eslint/eslint-plugin": "5.30.7",
     "@typescript-eslint/parser": "5.30.7",
@@ -45,6 +47,7 @@
     "chartjs-adapter-date-fns": "2.0.0",
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
+    "d3": "7.6.1",
     "date-fns": "2.28.0",
     "date-fns-tz": "1.3.6",
     "dotenv": "16.0.1",
