--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,15 +29,15 @@
   },
   "dependencies": {
     "@casl/ability": "5.4.4",
-    "@casl/prisma": "1.0.2",
+    "@casl/prisma": "2.0.0-alpha.1",
     "@nestjs/axios": "0.1.0",
-    "@nestjs/common": "9.0.4",
+    "@nestjs/common": "9.0.5",
     "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.0.4",
+    "@nestjs/core": "9.0.5",
     "@nestjs/event-emitter": "1.3.0",
     "@nestjs/jwt": "9.0.0",
     "@nestjs/passport": "9.0.0",
-    "@nestjs/platform-express": "9.0.4",
+    "@nestjs/platform-express": "9.0.5",
     "@nestjs/swagger": "6.0.4",
     "@nestjs/terminus": "9.0.0",
     "@prisma/client": "4.1.0",
@@ -51,7 +51,7 @@
     "fuse.js": "6.6.2",
     "jwks-rsa": "2.1.4",
     "lodash": "4.17.21",
-    "meilisearch": "0.27.0",
+    "meilisearch": "0.26.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "postmark": "3.0.12",
@@ -66,7 +66,7 @@
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
     "@nestjs/schematics": "9.0.1",
-    "@nestjs/testing": "9.0.4",
+    "@nestjs/testing": "9.0.5",
     "@self/seed": "workspace:0.0.1",
     "@types/cache-manager": "4.0.1",
     "@types/cookie-parser": "1.4.3",
@@ -74,7 +74,7 @@
     "@types/jest": "28.1.6",
     "@types/js-yaml": "4.0.5",
     "@types/lodash": "4.14.182",
-    "@types/node": "18.0.6",
+    "@types/node": "18.6.0",
     "@types/passport-jwt": "3.0.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.30.7",
