--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - backend
     networks:
       - aq-network
+    env_file:
+      - .env
     restart: unless-stopped
 
   backend:
@@ -35,6 +37,8 @@ services:
       - postgres
     networks:
       - aq-network
+    env_file:
+      - .env
     restart: unless-stopped
 
   redis:
@@ -69,6 +73,16 @@ services:
     networks:
       - aq-network
 
+  meilisearch:
+    image: getmeili/meilisearch:v0.27.0
+    container_name: meilisearch
+    volumes:
+      - meili_data:/meili_data
+    env_file:
+      - .env
+    networks:
+      - aq-network
+
 networks:
   aq-network:
     driver: bridge
@@ -78,3 +92,4 @@ volumes:
   caddy_data:
   caddy_config:
   postgres:
+  meili_data:
