install cloudflare cert in caddy docker-compose

--- a/Caddyfile
+++ b/Caddyfile
@@ -3,6 +3,7 @@
 }
 
 aqar.live {
+  tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
   handle_path /api/* {
     reverse_proxy backend:3002 {
       header_up Host {upstream_hostport}
