--- a/Caddyfile
+++ b/Caddyfile
@@ -25,6 +25,26 @@ aqar.live {
   respond "Fallback. You made a request to path:{path} port:{hostport}"
 }
 
+grafana.aqar.live {
+  tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+  reverse_proxy grafana:3000 {
+    header_up Host {upstream_hostport}
+    # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    header_up X-Real-IP {remote}
+    header_down Strict-Transport-Security max-age=31536000;
+  }
+}
+
+prometheus.aqar.live {
+  tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
+  reverse_proxy prometheus:9090 {
+    header_up Host {upstream_hostport}
+    # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+    header_up X-Real-IP {remote}
+    header_down Strict-Transport-Security max-age=31536000;
+  }
+}
+
 # pgadmin.aqar.live {
 #   reverse_proxy pgadmin:80 {
 #     header_up Host {upstream_hostport}
