--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,6 @@
 {
   debug
+  auto_https off
 }
 
 aqar.live {
@@ -28,20 +29,14 @@ aqar.live {
 grafana.aqar.live {
   tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
   reverse_proxy grafana:3000 {
-    header_up Host {upstream_hostport}
-    # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-    header_up X-Real-IP {remote}
-    header_down Strict-Transport-Security max-age=31536000;
+    header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
   }
 }
 
 prometheus.aqar.live {
   tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
   reverse_proxy prometheus:9090 {
-    header_up Host {upstream_hostport}
-    # header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-    header_up X-Real-IP {remote}
-    header_down Strict-Transport-Security max-age=31536000;
+    header_up Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
   }
 }
 
