--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -40,6 +40,7 @@
     "@types/cookie": "0.5.1",
     "@types/d3": "7.4.0",
     "@types/jsonwebtoken": "8.5.8",
+    "@types/lodash-es": "4.17.6",
     "@typescript-eslint/eslint-plugin": "5.30.7",
     "@typescript-eslint/parser": "5.30.7",
     "autoprefixer": "10.4.7",
@@ -61,6 +62,7 @@
     "jsonwebtoken": "8.5.1",
     "just-compare": "2.1.1",
     "just-deep-map-values": "1.0.0",
+    "lodash-es": "4.17.21",
     "logrocket": "3.0.1",
     "nanoid": "4.0.0",
     "postcss": "8.4.14",
