--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -62,6 +62,8 @@
     "jsonwebtoken": "8.5.1",
     "just-compare": "2.1.1",
     "just-deep-map-values": "1.0.0",
+    "just-diff": "5.0.3",
+    "just-index": "4.0.1",
     "lodash-es": "4.17.21",
     "logrocket": "3.0.1",
     "nanoid": "4.0.0",
