--- a/packages/site/.env.example
+++ b/packages/site/.env.example
@@ -1,6 +1,10 @@
-# DATABASE_URL=
 # AUTH0_CLIENT_SECRET=
 
 VITE_SITE_URL=https://aqar.live
 VITE_API_URL=https://aqar.live/api
 VITE_API_URL_LOCAL=http://backend:3002
+
+### if using docker:
+# VITE_SITE_URL=http://localhost:3000 no need to set this locally?
+# VITE_API_URL=https://localhost/api
+# VITE_API_URL_LOCAL=http://backend:3002/
