--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,5 @@
-PGADMIN_DEFAULT_EMAIL=dev.tester.2@mailthink.net
-PGADMIN_DEFAULT_PASSWORD=somepass55
-
-CADDY_PORT=80
-SITE_ORIGIN=https://aqar.live
-
-MEILISEARCH_HOST=http://meilisearch:7700
-VITE_MEILISEARCH_HOST=http://meilisearch:7700
-
-DATABASE_URL="postgres://postgres:postgres@postgres:5432/aq-db"
 AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
+SITE_ORIGIN=https://aqar.live
 
 # POSTMARK
 # prod
@@ -17,3 +8,11 @@ POSTMARK_TOKEN=d107c908-4ed3-45f4-b7e2-c40220cab455
 # POSTMARK_TOKEN=aecd4fd3-1314-44e9-b1b5-d7dbb89fd0ca
 
 MEILI_MASTER_KEY=MASTER_KEY
+MEILISEARCH_HOST=http://meilisearch:7700
+VITE_MEILISEARCH_HOST=http://meilisearch:7700
+
+# Dev in docker only
+CADDY_PORT=80
+
+PGADMIN_DEFAULT_EMAIL=dev.tester.2@mailthink.net
+PGADMIN_DEFAULT_PASSWORD=somepass55
