replace SITE_ORIGIN with VITE_SITE_URL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
-SITE_ORIGIN=https://aqar.live
+VITE_SITE_URL=https://aqar.live
 
 # POSTMARK
 # prod
