replace.meta.env

--- a/packages/site/.env.example
+++ b/packages/site/.env.example
@@ -2,9 +2,9 @@
 
 PUBLIC_SITE_URL=https://aqar.live
 PUBLIC_API_URL=https://aqar.live/api
-API_URL_LOCAL=http://backend:3002
+PUBLIC_API_URL_LOCAL=http://backend:3002
 
 ### if using docker:
 # PUBLIC_SITE_URL=http://localhost:3000 no need to set this locally?
 # PUBLIC_API_URL=https://localhost/api
-# API_URL_LOCAL=http://backend:3002/
+# PUBLIC_API_URL_LOCAL=http://backend:3002/
