--- a/packages/site/.env.example
+++ b/packages/site/.env.example
@@ -8,3 +8,6 @@ PUBLIC_API_URL_LOCAL=http://backend:3002
 # PUBLIC_SITE_URL=http://localhost:3000 no need to set this locally?
 # PUBLIC_API_URL=https://localhost/api
 # PUBLIC_API_URL_LOCAL=http://backend:3002/
+
+# notes:
+## Render hostport doesn't add a scheme (http/https) to the url.
