--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -56,6 +56,7 @@
     "jose": "4.8.3",
     "jsdom": "20.0.0",
     "jsonwebtoken": "8.5.1",
+    "jspdf-invoice-template": "1.4.3",
     "just-compare": "2.1.1",
     "just-deep-map-values": "1.0.0",
     "just-diff": "5.0.3",
