--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -61,6 +61,7 @@
     "remeda": "1.0.1",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
+    "swagger-stats": "0.99.2",
     "swagger-ui-express": "4.5.0"
   },
   "devDependencies": {
@@ -77,6 +78,7 @@
     "@types/node": "18.6.3",
     "@types/passport-jwt": "3.0.6",
     "@types/supertest": "2.0.12",
+    "@types/swagger-stats": "0.95.5",
     "@typescript-eslint/eslint-plugin": "5.32.0",
     "@typescript-eslint/parser": "5.32.0",
     "eslint": "8.21.0",
