--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -75,6 +75,7 @@
     "@types/jest": "28.1.6",
     "@types/js-yaml": "4.0.5",
     "@types/lodash": "4.14.182",
+    "@types/multer": "1.4.7",
     "@types/node": "18.6.3",
     "@types/passport-jwt": "3.0.6",
     "@types/supertest": "2.0.12",
