--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,7 @@
     "seed": "tsx ../seed/src/go-seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.142.0",
     "@casl/ability": "6.0.0",
     "@casl/prisma": "1.0.4",
     "@nestjs/axios": "0.1.0",
