--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -75,6 +75,7 @@
     "svelte2tsx": "0.5.13",
     "tailwindcss": "3.1.7",
     "tippy.js": "6.3.7",
+    "ts-toolbelt": "9.6.0",
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "unplugin-icons": "0.14.8",
