--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.142.0",
+    "@aws-sdk/s3-request-presigner": "3.145.0",
     "@casl/ability": "6.0.0",
     "@casl/prisma": "1.0.4",
     "@nestjs/axios": "0.1.0",
