--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,12 @@ services:
         sync: false
       - key: PUBLIC_SITE_URL
         sync: false
+      - key: R2_ACCOUNT_ID
+        sync: false
+      - key: R2_ACCESS_KEY_ID
+        sync: false
+      - key: R2_SECRET_ACCESS_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: aqaratechdb
