--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -21,6 +21,7 @@ RUN pnpm --filter=. --filter=@self/site... install --prod=false
 # https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
 # TODO copy over the modules from above onto a `slim` image
 
+# static environment variables should be available at this point
 # TODO move env var to bash script
 RUN pnpm --filter=@self/site --filter=@self/sdk run build 
 
