--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"css.validate": false,
 	"files.exclude": {
-		"**/node_modules/": true
+		// "**/node_modules/": true
 	},
 	"search.exclude": {
 		"**/node_modules": true,
