--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,6 +5,10 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "files": [
+    "dist",
+    "prisma"
+  ],
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
