add docker ignore template

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,31 @@
 **/node_modules
 node_modules
+Dockerfile.backend
+Dockerfile.site
+
+######################### COMMON ###############################################
+# https://raw.githubusercontent.com/erdaltsksn/dockerignore/main/templates/Common.dockerignore
+################################################################################
+# Git
+.git
+.gitignore
+.gitattributes
+.github
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Documentation
+README.md
+CHANGELOG.md
+CONTRIBUTING.md
+CODE_OF_CONDUCT.md
+SECURITY.md
+
+# macOS (optional)
+.DS_Store
+
+# Visual Studio Code (optional)
+.vscode
