--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -1,4 +1,4 @@
-FROM node:16.9
+FROM node:16.9 as site
 
 # use multistage: https://www.howtogeek.com/devops/how-to-deploy-a-caddy-web-server-with-docker/
 # Install OpenJDK-11
@@ -13,22 +13,25 @@ COPY pnpm-lock.yaml ./
 RUN pnpm fetch 
 
 ADD . ./
-# TODO only intall site stuff
-# RUN pnpm install -r --offline 
-RUN pnpm --filter=. --filter=@self/site... install --prod=false
-
+RUN pnpm --filter=. --filter=@self/site... install --prod=false --offline
 
 # https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
-# TODO copy over the modules from above onto a `slim` image
 
 # static environment variables should be available at this point
 # TODO move env var to bash script
 RUN pnpm --filter=@self/site --filter=@self/sdk run build 
 
-WORKDIR /app/packages/site
+RUN pnpm --filter=@self/site deploy pruned
 
+
+FROM node:16.9-alpine as production
+
+WORKDIR /app
+ENV NODE_ENV=production
 ARG PUBLIC_SITE_URL
 ENV PUBLIC_SITE_URL_2=${PUBLIC_SITE_URL}
+
+COPY --from=site /app/pruned .
 
 # https://github.com/sveltejs/kit/blob/master/packages/adapter-node/README.md#environment-variables
 CMD ["sh", "-c", "ORIGIN=$PUBLIC_SITE_URL_2 node build/index.js"]
