--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -3,7 +3,6 @@
 FROM node:16.9 as site
 
 ARG PUBLIC_SITE_URL
-RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} PUBLIC_SITE_URL_2 ${PUBLIC_SITE_URL_2} NODE_ENV ${NODE_ENV} PORT ${PORT} AAA=${PORT} BBB=${PUBLIC_SITE_URL} CCC=${PUBLIC_SITE_URL_2} DDD=$PUBLIC_SITE_URL_2 EEE=$PUBLIC_SITE_URL"
 
 # use multistage: https://www.howtogeek.com/devops/how-to-deploy-a-caddy-web-server-with-docker/
 # Install OpenJDK-11
@@ -30,8 +29,9 @@ RUN pnpm --filter=@self/site deploy pruned
 
 
 FROM node:16.9-alpine as production
+
 ARG PUBLIC_SITE_URL
-RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} PUBLIC_SITE_URL_2 ${PUBLIC_SITE_URL_2} NODE_ENV ${NODE_ENV} PORT ${PORT} AAA=${PORT} BBB=${PUBLIC_SITE_URL} CCC=${PUBLIC_SITE_URL_2} DDD=$PUBLIC_SITE_URL_2 EEE=$PUBLIC_SITE_URL"
+RUN echo "ENV sanity check: PUBLIC_SITE_URL ${PUBLIC_SITE_URL} INBRACKETS=${PUBLIC_SITE_URL} NOBRACKETS=$PUBLIC_SITE_URL"
 
 WORKDIR /app
 ENV NODE_ENV=production
