--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -53,6 +53,7 @@
     "cookie-parser": "1.4.6",
     "date-fns": "2.29.1",
     "fuse.js": "6.6.2",
+    "helmet": "5.1.1",
     "jwks-rsa": "2.1.4",
     "lodash": "4.17.21",
     "meilisearch": "0.26.0",
