--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -51,6 +51,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "cookie-parser": "1.4.6",
+    "csurf": "1.11.0",
     "date-fns": "2.29.1",
     "fuse.js": "6.6.2",
     "helmet": "5.1.1",
@@ -76,6 +77,7 @@
     "@nestjs/testing": "9.0.8",
     "@types/cache-manager": "4.0.1",
     "@types/cookie-parser": "1.4.3",
+    "@types/csurf": "1.11.2",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.6",
     "@types/js-yaml": "4.0.5",
