--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -38,5 +38,8 @@ ENV NODE_ENV=production
 
 COPY --from=site /app/pruned .
 
+# NO-OP, for convenience only
+EXPOSE 3000
+
 # https://github.com/sveltejs/kit/blob/master/packages/adapter-node/README.md#environment-variables
 CMD ["sh", "-c", "ORIGIN=$PUBLIC_SITE_URL node build/index.js"]
