--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ts-toolbelt": "9.6.0"
+  },
+  "devDependencies": {
+    "@tsconfig/esm": "1.0.2",
+    "typescript": "4.7.4"
   }
 }
