--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -47,6 +47,7 @@
     "@nestjs/swagger": "6.0.5",
     "@nestjs/terminus": "9.1.0",
     "@prisma/client": "4.2.1",
+    "@self/utils": "workspace:1.0.0",
     "cache-manager": "4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
