--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -85,6 +85,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@self/utils": "workspace:1.0.0",
     "@types/debounce": "^1.2.1",
     "debounce": "^1.2.1"
   }
