--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -25,6 +25,7 @@
     "@iconify/json": "2.1.95",
     "@rgossiaux/svelte-headlessui": "1.0.2",
     "@self/sdk": "workspace:0.0.1",
+    "@self/utils": "workspace:1.0.0",
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
     "@sveltejs/adapter-auto": "1.0.0-next.65",
@@ -36,6 +37,7 @@
     "@tailwindcss/typography": "0.5.4",
     "@types/cookie": "0.5.1",
     "@types/d3": "7.4.0",
+    "@types/debounce": "1.2.1",
     "@types/jsonwebtoken": "8.5.8",
     "@types/lodash-es": "4.17.6",
     "@typescript-eslint/eslint-plugin": "5.33.1",
@@ -47,6 +49,7 @@
     "d3": "7.6.1",
     "date-fns": "2.29.2",
     "date-fns-tz": "1.3.6",
+    "debounce": "1.2.1",
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
@@ -79,10 +82,5 @@
     "vite": "3.0.9",
     "zod": "3.18.0"
   },
-  "type": "module",
-  "dependencies": {
-    "@self/utils": "workspace:1.0.0",
-    "@types/debounce": "^1.2.1",
-    "debounce": "^1.2.1"
-  }
+  "type": "module"
 }
