--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -68,8 +68,7 @@
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
     "swagger-stats": "0.99.2",
-    "swagger-ui-express": "4.5.0",
-    "ts-toolbelt": "9.6.0"
+    "swagger-ui-express": "4.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
