--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -67,8 +67,7 @@
     "remeda": "1.0.1",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
-    "swagger-stats": "0.99.2",
-    "swagger-ui-express": "4.5.0"
+    "swagger-stats": "0.99.2"
   },
   "devDependencies": {
     "@nestjs/cli": "9.0.0",
