--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -69,6 +69,7 @@
     "svelte": "3.49.0",
     "svelte-check": "2.8.1",
     "svelte-dnd-action": "0.9.19",
+    "svelte-frappe-charts": "1.9.2",
     "svelte-meta-tags": "2.6.2",
     "svelte-preprocess": "4.10.7",
     "tailwindcss": "3.1.8",
