--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -16,7 +16,8 @@
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "test": "playwright test",
-    "report": "playwright show-report"
+    "report": "playwright show-report",
+    "debug": "vite --port 3000 --debug"
   },
   "devDependencies": {
     "@felte/reporter-svelte": "1.1.3",
