--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -37,6 +37,7 @@
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/typography": "0.5.4",
+    "@tanstack/svelte-table": "8.5.11",
     "@types/cookie": "0.5.1",
     "@types/d3": "7.4.0",
     "@types/debounce": "1.2.1",
