--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -43,6 +43,7 @@
     "@types/debounce": "1.2.1",
     "@types/jsonwebtoken": "8.5.9",
     "@types/lodash-es": "4.17.6",
+    "@types/papaparse": "5.3.5",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
     "@vitejs/plugin-basic-ssl": "0.1.2",
@@ -67,6 +68,7 @@
     "just-diff": "5.1.1",
     "lodash-es": "4.17.21",
     "logrocket": "3.0.1",
+    "papaparse": "5.3.2",
     "postcss": "8.4.16",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "0.1.13",
