add public route path to .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ PUBLIC_API_URL=http://localhost:3002
 ### cloudflare tunnel
 # PUBLIC_SITE_URL=https://site.aqar.live
 # PUBLIC_API_URL=https://api.aqar.live
+#### for swagger-stats cookie path
+# PUBLIC_ROUTE_PATH=/api
 
 AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
 
