--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -19,6 +19,8 @@
     "start:debug": "nest start --debug --watch",
     "start:dev": "nest start --watch",
     "start:prod": "node dist/main",
+    "preview": "node dist/main",
+    "preview:tunnel": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
