--- a/turbo.json
+++ b/turbo.json
@@ -34,6 +34,11 @@
       "dependsOn": [
         "build"
       ]
+    },
+    "preview:tunnel": {
+      "dependsOn": [
+        "build"
+      ]
     }
   },
   "globalDependencies": [
