--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:site": "turbo run build --filter=@self/site",
     "build:docs": "turbo run build --filter=@self/docs",
     "seed": "turbo run seed --filter=@self/seed --filter=@self/backend",
-    "test": "turbo run test --",
+    "test": "pnpm run --filter=@self/test test",
     "dev": "turbo run --filter \\!@self/docs dev",
     "lint": "turbo run lint"
   },
