--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -85,7 +85,7 @@
     "tslib": "2.4.0",
     "typescript": "4.8.2",
     "unplugin-icons": "0.14.8",
-    "vite": "3.0.9",
+    "vite": "3.1.0-beta.1",
     "zod": "3.18.0"
   },
   "type": "module"
